--- a/index.html
+++ b/index.html
@@ -2,18 +2,59 @@
 <html>
 <head>
 	<title>2website.com</title>
-	<!-- <link rel="stylesheet" type="text,css" href="style.css"> -->
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,400&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="top"> <h1> Abu Mohammad Younus</h1> </div>
-	<div class="mid">
-		<div class="left"> Left</div>
-		<div class="middle"> Middle</div>
-		<div class="right">Right</div>
-	</div>
-	<div class="bottom"> bottom</div>
+	<header class="topbaner">
+			<div class="half_width">
+				<h1>Welcome To</h1>
+				<h1 class="name">Abu <span class="orgclr">Mohammad</span> Younus World!</h1>
+				<h3>Build Climber and Train Stopper.</h3>
+				<p>Hobbies play a very crucial role in everyone's life. Whenever we are free, it is good to follow our hobbie. and we do not feel idle. Every person finds their happiness and enjoys doing some kind of activity in their leisure time, these activities are known as hobbies.</p>
+				<div class="btn">
+					<a href="https://www.facebook.com/saurav.ahshan/"> <button class="buttons" style="height: 43px; width: 139.2px;"> <span class="hire_me"> HIRE ME</span></button></a>
+				</div>
+			</div>
+			<div class="half_width">
+				<img  class="imgsize" src="image/saurav.png">
+			</div>
+	</header>
 
+	<!-- box 2==================================================== -->
+	<section class="section_one">
+			<div class="half_width">
+				<img  class="section-image" src="image/saurav.png">
+			</div>
+			<div class="half_width">
+				<h1>Dream Big</h1>
+				<h3> Become a Web Developer</h3>
+				<p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+				<div>
+					<a href="http://localhost:3000/index.html"> <button class="buttons"> <span class="hire_me">Download Resume</span></button></a>
+				</div>
+			</div>
+
+			<img src="image/dream-bg.png">
+
+	</section>
+	<h1 class="exp">Experience:</h1>
+	<!-- -------------------------- -->
+	<section class="st2">
+		<div class="half_width fstack">
+			<h1>Full Stack Developer</h1>
+			<h3 class="orgclr">2024-Present | Pro Level Developer</h3>
+			<p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+		</div>
+		<div class="half_width bstack">
+			<h1>Baby Web Developer</h1>
+			<h3 class="orgclr">2022-2024|Hero Learner</h3>
+			<p> They didn't offer me a job. But I made myself as a remover web deveoper. I made their website and showed it to them. They liked it. And uploaded the content. it was fun working at Programming Hero</p>
+			
+		</div>
+	</section>
 
 </body>
 </html>
